--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -5,3 +5,8 @@
     border-right:1px solid rgba(128, 126, 126, 0.274) ;
     margin-right: 2px;
 }
+.nameBorder{
+    border-right:1px solid rgba(128, 126, 126, 0.274);
+    padding-right:7px;
+
+}
